Distracted EditText from gaining focus, and thus making the keyboard stay hidden onCreate... Learning how to replicate the OLED display within the app. Should display a rounded altitude value. All the buffer list views are cleaned up and removed.

--- a/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
+++ b/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
@@ -42,6 +42,15 @@
             android:background="#cccccc"
             android:orientation="horizontal">
 
+            <!-- Dummy item to prevent sendEditText from receiving focus -->
+            <LinearLayout
+                android:id="@+id/linearLayout_focus"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:orientation="vertical"/>
+
             <EditText
                 android:id="@+id/sendEditText"
                 android:layout_width="0dp"
