--- a/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
+++ b/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
@@ -69,7 +69,23 @@
             android:textSize="54sp"
             android:textColor="#ffffff"
             android:text="4804"/>
+
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/averaginglayout">
+        <TextView
+            android:id="@+id/velocity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="48sp"
+            android:textColor="#ffffff"
+            android:gravity="end"
+            android:layout_marginEnd="40dp"
+            android:text="0"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/averaginglayout"
